--- a/css/style.css
+++ b/css/style.css
@@ -203,16 +203,67 @@ input[type="radio"].visually-hidden {
   line-height: 18px;
   color: #32425c;
   text-decoration: underline;
+  margin-right: 25px;
 }
 
 .user .user-name {
+  position: relative;
   font-size: 21px;
   line-height: 21px;
   color: #000000;
+  padding: 12px 70px 10px 50px;
   text-transform: uppercase;
   font-style: normal;
+  margin-bottom: 10px;
 
   background-color: #ffffff;
+}
+
+.user .user-name::before {
+  content: "";
+
+  position: absolute;
+  top: 13px;
+  left: 13px;
+
+  width: 20px;
+  height: 18px;
+  background-image: url("../img/icon-user.svg");
+}
+
+.user .user-name::after {
+  content: "";
+
+  position: absolute;
+  top: 14px;
+  left: 290px;
+
+  width: 20px;
+  height: 17px;
+
+  background-image: url("../img/icon-login.svg");
+}
+
+.user-menu {
+  display: flex;
+  list-style: none;
+  position: relative;
+
+  margin-top: 0px;
+}
+
+.user-menu::before {
+  content: "";
+
+  position: absolute;
+  top: 9px;
+  left: 125px;
+
+  width: 5px;
+  height: 5px;
+
+  background-color: #32425c;
+  border-radius: 50%;
 }
 
 .contacts .contacts-phone {
@@ -380,6 +431,8 @@ input[type="radio"].visually-hidden {
 .button-transport {
   padding: 13px 40px;
 }
+
+/*Стили для меню пользователя в каталоге*/
 
 /*Стили для каталога*/
 .breadcrumbs {
