--- a/css/style.css
+++ b/css/style.css
@@ -67,8 +67,9 @@ input[type="radio"].visually-hidden {
   font-size: 17px;
   line-height: 18px;
   color: #ffffff;
+  margin-bottom: 28px;
 
-  background-color: #32425c;
+  background-color: #293449;
 }
 
 .header-top .container {
@@ -77,7 +78,7 @@ input[type="radio"].visually-hidden {
 }
 
 .header-top .basket {
-  padding: 13px 30px 13px 50px;
+  padding: 13px 30px 11px 49px;
   position: relative;
 }
 
@@ -85,17 +86,18 @@ input[type="radio"].visually-hidden {
   content: "";
 
   position: absolute;
-  top: 14px;
-  left: 15px;
+  top: 13px;
+  left: 16px;
 
   width: 15px;
   height: 15px;
 
   background-image: url("../img/cart-icon.svg");
+  opacity: 0.3;
 }
 
 .header-top .bookmarks {
-  padding: 13px 30px 13px 45px;
+  padding: 13px 30px 11px 49px;
   position: relative;
 }
 
@@ -103,21 +105,24 @@ input[type="radio"].visually-hidden {
   content: "";
 
   position: absolute;
-  top: 14px;
-  left: 15px;
+  top: 13px;
+  left: 22px;
 
   width: 14px;
   height: 16px;
 
   background-image: url("../img/icon-bookmark.svg");
+  opacity: 0.3;
 }
 
 .header-top .order {
-  padding: 13px 20px;
+  padding: 13px 19px 11px 21px;
   background-color: #63a63e;
 }
 
-.header-top a:hover {
+.header-top .bookmarks:hover,
+.header-top .basket:hover,
+.header-top input:hover {
   background-color: #212a3a;
 }
 
@@ -125,7 +130,8 @@ input[type="radio"].visually-hidden {
   background-color: #5fbb2d;
 }
 
-.header-top a:active {
+.header-top .bookmarks:active,
+.header-top .basket:active {
   background-color: #161d29;
 }
 
@@ -142,24 +148,34 @@ input[type="radio"].visually-hidden {
 
 .search-submit input[type="submit"] + .submit-indicator {
   position: absolute;
-  top: 16px;
-  left: 235px;
+  top: 13px;
+  left: 238px;
 
   width: 17px;
   height: 17px;
 
-  background-image: url("../img/icon-search.svg");
+  background-image: url("../img/icon-search-normal.svg");
+  opacity : 0.2;
   cursor: pointer;
 }
 
+.basket:hover::before,
+.bookmarks:hover::before,
+.search:hover .search-submit input[type="submit"] + .submit-indicator {
+  opacity : 1;
+}
+
+.search:focus .search-submit input[type="submit"] + .submit-indicator {
+  background-image: url("../img/icon-search-focus.svg");
+}
 .search .search-input {
   margin-left: 221px;
   font-size: 17px;
   line-height: 18px;
   width: 265px;
-  padding-top: 15px;
+  padding-top: 14px;
   padding-bottom: 11px; 
-  padding-left: 50px;
+  padding-left: 48px;
   outline: none;
 
   background-color: transparent;
@@ -187,6 +203,7 @@ input[type="radio"].visually-hidden {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 21px;
 }
 
 .header-middle .headline {
@@ -194,7 +211,7 @@ input[type="radio"].visually-hidden {
   line-height: 23px;
   color: #ee3643;
   font-style: italic;
-  width: 196px;
+  width: 205px;
   margin-left: 53px;
 }
 
@@ -228,7 +245,7 @@ input[type="radio"].visually-hidden {
 
   width: 20px;
   height: 18px;
-  background-image: url("../img/icon-user.svg");
+  background-image: url("../img/icon-user-normal.svg");
 }
 
 .user .user-name::after {
@@ -241,7 +258,7 @@ input[type="radio"].visually-hidden {
   width: 20px;
   height: 17px;
 
-  background-image: url("../img/icon-login.svg");
+  background-image: url("../img/icon-logout-normal.svg");
 }
 
 .user-menu {
@@ -266,14 +283,19 @@ input[type="radio"].visually-hidden {
   border-radius: 50%;
 }
 
+.contacts {
+  margin-left: 45px;
+  width: 270px;
+}
+
 .contacts .contacts-phone {
   position: relative;
   font-size: 21px;
   line-height: 21px;
   font-style: normal;
   color: #ee3643;
-  text-align: center;
-  padding-top: 12px;
+  padding-top: 9px;
+  padding-left: 75px;
   padding-bottom: 10px;
   margin-bottom: 0px;
 
@@ -284,7 +306,7 @@ input[type="radio"].visually-hidden {
   content: "";
 
   position: absolute;
-  top: 13px;
+  top: 9px;
   left: 15px;
 
   width: 19px;
@@ -298,7 +320,8 @@ input[type="radio"].visually-hidden {
   line-height: 24px;
   color: #32425c;
   font-style: normal;
-  margin-top: 5px;
+  margin-top: 0px;
+  text-align: center;
 }
 
 .user-navigation {
@@ -334,12 +357,20 @@ input[type="radio"].visually-hidden {
   background-image: url("../img/icon-login.svg");
 }
 
-.user-navigation .registration {
-  padding: 13px 25px 15px 25px;
+.user-navigation a:hover{
+  color: #ee3643;
 }
 
-.user-navigation a:hover {
-  color: #ee3643;
+.enter:hover::before {
+  background-image: url("../img/icon-login-hover.svg")
+}
+
+.enter:active::before {
+  background-image: url("../img/icon-login.svg")
+}
+
+.user-navigation .registration {
+  padding: 13px 25px 15px 25px;
 }
 
 .user-navigation a:focus {
@@ -356,23 +387,34 @@ input[type="radio"].visually-hidden {
   justify-content: space-between;
   list-style: none;
   padding-left: 0;
+  margin-top: 0;
 
   background-color: #32425c;
   box-shadow: inset 0px -5px 0 0 #293449;
 }
 
-.site-navigation a {
+.site-navigation .site-navigation-items {
   display: block;
   font-size: 17px;
   line-height: 17px;
-  padding: 20px 30px 25px 30px;
+  padding: 20px 30px 23px 30px;
 }
 
-.site-navigation a:hover {
+.site-navigation .site-navigation-first {
+  padding-left: 53px;
+  padding-right: 35px;
+}
+
+.site-navigation .site-navigation-last {
+  padding-right: 53px;
+  padding-left: 30px;
+}
+
+.site-navigation .site-navigation-items:hover {
   background-color: #1d2739;
 }
 
-.site-navigation a:focus {
+.site-navigation .site-navigation-items:active {
   color: rgba(255, 255, 255, 0.5);
   background-color: #1d2739;
 }
@@ -639,6 +681,16 @@ input[type="radio"].visually-hidden {
 
 .catolog-item:hover {
   box-shadow: 0px 10px 25px 0 rgba(41, 52, 73, 0.5);
+}
+
+.catolog-item-basket {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  margin-right: 20px;
+
+  background: url("../img/cart-icon.svg") no-repeat 0 0;
+  opacity: 0.3;
 }
 
 .catolog-item .strip {
@@ -927,13 +979,23 @@ input[type="radio"].visually-hidden {
   margin-left: 53px;
 }
 
+/*Модальные окна*/
+
 .modal {
   position: fixed;
   width: 620px;
+  display: none;
 
   background-color: #ffffff;
   border-top: 7px solid #ee3643;
+  box-shadow: 0px 20px 40px 0 rgba(0, 1, 1, 0.75);
   z-index: 50;
+}
+
+.container-modal {
+  width: 460px;
+  margin: 0 auto;
+  padding: 0px;
 }
 
 .modal-close {
@@ -985,6 +1047,67 @@ input[type="radio"].visually-hidden {
   left: 50%;
   margin-left: -310px;
 }
+
+/*Модальное окно на главной*/
+
+.letter-form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.letter-form label {
+  font-family: 'Cuprum', Arial, sans-serif;
+  font-size: 18px;
+  line-height: 18px;
+  color: #000000;
+  display: block;
+
+  margin-bottom: 10px; 
+
+  cursor: pointer;
+}
+
+.letter-form input {
+  box-sizing: border-box;
+  font: inherit;
+  width: 220px;
+
+  padding-top: 13px;
+  padding-left: 15px;
+  padding-bottom: 13px;
+
+  border: solid 2px #dee3e4;
+}
+
+.letter-form input:hover {
+  border: solid 2px #b5b5b5;
+}
+
+.letter-form input:focus {
+  border: solid 2px #ee3643;
+  outline: none;
+}
+
+.letter-form textarea {
+  box-sizing: border-box;
+  width: 460px;
+  padding-top: 13px;
+  padding-left: 15px;
+
+  border: solid 2px #dee3e4;
+}
+
+.letter-form textarea:hover {
+  border: solid 2px #b5b5b5;
+}
+
+.letter-form textarea:focus {
+  border: solid 2px #ee3643;
+  outline: none;
+}
+
+/*Модальное окно в каталоге*/
 
 .modal-top-productbasket {
   display: flex;
