--- a/css/style.css
+++ b/css/style.css
@@ -27,9 +27,9 @@ img {
   line-height: 18px;
   color: #ffffff;
 
-  background-color: #ee3643;
+  background-color: #ee3643;;
   border: none;
-  border-radius: 5px; 
+  border-radius: 3px; 
   text-transform: uppercase;
   text-align: center;
   vertical-align: middle;
@@ -203,7 +203,7 @@ input[type="radio"].visually-hidden {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 21px;
+  margin-bottom: 25px;
 }
 
 .header-middle .headline {
@@ -281,6 +281,10 @@ input[type="radio"].visually-hidden {
 
   background-color: #32425c;
   border-radius: 50%;
+}
+
+.user-menu a:hover {
+  color: #ee3643;
 }
 
 .contacts {
@@ -397,7 +401,7 @@ input[type="radio"].visually-hidden {
   display: block;
   font-size: 17px;
   line-height: 17px;
-  padding: 20px 30px 23px 30px;
+  padding: 20px 30px 23px 24px;
 }
 
 .site-navigation .site-navigation-first {
@@ -423,7 +427,7 @@ input[type="radio"].visually-hidden {
 .company {
   display: flex;
   justify-content: space-between;
-  margin-top: 80px;
+  margin-top: 55px;
 }
 
 .company h2 {
@@ -436,15 +440,36 @@ input[type="radio"].visually-hidden {
   width: 520px;
 }
 
+.company-description p,
+.company-address p {
+  font-family: PT Sans;
+  font-size: 13px;
+  line-height: 24px;
+  margin-bottom: 23px;
+}
+
 .company-transport {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .company-transport li {
   position: relative;
   font-size: 18px;
   line-height: 20px;
-  margin-bottom: 15px;
+  margin: 0;
+  margin-left: 35px;
+  margin-bottom: 20px;
+}
+
+.company-address img {
+  margin-top: 7px;
+}
+
+.company-transport li:last-child,
+.company-address img {
+  margin-bottom: 35px;
 }
 
 .company-transport li::before {
@@ -466,12 +491,12 @@ input[type="radio"].visually-hidden {
 
 .button-map {
   width: 100%;
-  padding-top: 13px;
-  padding-bottom: 13px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .button-transport {
-  padding: 13px 40px;
+  padding: 10px 40px;
 }
 
 /*Стили для каталога*/
@@ -525,6 +550,7 @@ input[type="radio"].visually-hidden {
 .filter-catalog {
   display: flex;
   justify-content: space-between;
+  font-family: PT Sans;
 }
 
 .page-title {
@@ -594,6 +620,15 @@ input[type="radio"].visually-hidden {
   background-position: 0 0;
 }
 
+.filter-input-checkbox:hover + label::before {
+  background-image: url("../img/checkbox-off-hover.svg");
+}
+
+.filter-input-checkbox:disabled + label::before {
+  background-image: url("../img/checkbox-off.svg");
+  opacity: 0.3;
+}
+
 .filter-input:disabled + label {
   color: rgba(0, 0, 0, 0.4);
 }
@@ -614,6 +649,15 @@ input[type="radio"].visually-hidden {
   background-position: 0 0;
 }
 
+.filter-input-checkbox:checked:hover + label::after {
+  background-image: url("../img/checkbox-on-hover.svg");
+}
+
+.filter-input-checkbox:checked:disabled + label::after {
+  background-image: url("../img/checkbox-on-hover.svg");
+  opacity: 0.3;
+}
+
 .filter-input-checkbox:checked + label::before {
   background-image: none;
 }
@@ -631,6 +675,10 @@ input[type="radio"].visually-hidden {
   border-radius: 50%;
 }
 
+.filter-input-radio:hover + label::before {
+  border-color: #b5b5b5;
+}
+
 .filter-input-radio:checked + label::after {
   content: "";
   position: absolute;
@@ -644,8 +692,22 @@ input[type="radio"].visually-hidden {
   border-radius: 50%;
 }
 
+.filter-input-radio:checked:hover + label::after {
+  background-color: #b5b5b5;
+}
+
+.filter-input-radio:disabled + label::before {
+  border-color: #b5b5b5;
+  opacity: 0.3;
+}
+
+.filter-input-radio:checked:disabled + label::after {
+  background-color: #b5b5b5;
+  opacity: 0.3;
+}
+
 .filter-button {
-  font-family: PTSans;
+  font-family: PT Sans;
   font-size: 13px;
   line-height: 18px;
   
@@ -663,6 +725,7 @@ input[type="radio"].visually-hidden {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  font-family: PT Sans;
 }
 
 .catalog ul {
@@ -691,6 +754,10 @@ input[type="radio"].visually-hidden {
 
   background: url("../img/cart-icon.svg") no-repeat 0 0;
   opacity: 0.3;
+}
+
+.button-green-buy:hover .catolog-item-basket {
+  opacity: 1;
 }
 
 .catolog-item .strip {
@@ -768,6 +835,7 @@ input[type="radio"].visually-hidden {
 }
 
 .catolog-item-button {
+  font-family: Cuprum;
   position: absolute;
   top: 0;
   left: 0;
@@ -797,10 +865,31 @@ input[type="radio"].visually-hidden {
   border-radius: 3px;
 }
 
-.catolog-item-button a:last-child {
+.catolog-item-button .button-green-bookmark {
   color: #32425c;
   background: white;
   border-color: #63a63e;
+}
+
+.catolog-item-button .button-green-buy:hover {
+  background-color: #5fbb2d;
+  border: 3px solid #5fbb2d;
+  border-bottom-color:#367315;
+}
+
+.catolog-item-button .button-green-buy:active {
+  background-color: #518534;
+  border: 3px solid #518534;
+  border-bottom-color:#518534;
+}
+
+.catolog-item-button .button-green-bookmark:hover {
+  border-color: #32425c;
+}
+
+.catolog-item-button .button-green-bookmark:active {
+  color: rgba(50, 66, 92, 0.3);
+  border-color: rgba(50, 66, 92, 0.3);
 }
 
 .catolog-item-button {
@@ -881,6 +970,14 @@ input[type="radio"].visually-hidden {
   background-color: #ee3643;
 }
 
+.footer-top-adress {
+  margin-right: 30px;
+}
+
+.footer-top-adress p {
+  margin-top: 26px;
+}
+
 .footer-top ul {
   list-style: none;
   display: flex;
@@ -891,6 +988,15 @@ input[type="radio"].visually-hidden {
   flex-grow: 1;
 }
 
+.footer-menu {
+  margin-top: 37px;
+}
+
+.footer-categories {
+  margin-top: 34px;
+  padding-bottom: 56px;
+}
+
 .footer-categories li{
   margin-left: 23px;
 }
@@ -899,6 +1005,8 @@ input[type="radio"].visually-hidden {
   font-size: 16px;
   line-height: 18px;
   color: #ffffff;
+  padding-top: 20px;
+  padding-bottom: 20px;
 
   background-color: #293449;
 }
@@ -906,13 +1014,13 @@ input[type="radio"].visually-hidden {
 .footer-bottom .container {
   display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 
 .footer-bottom-social {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-left: 75px;
 }
 
 .social-button {
@@ -976,7 +1084,8 @@ input[type="radio"].visually-hidden {
 }
 
 .footer-bottom-feedback p {
-  margin-left: 53px;
+  margin-left: 38px;
+  margin-right: 15px;
 }
 
 /*Модальные окна*/
