--- a/css/style.css
+++ b/css/style.css
@@ -622,6 +622,70 @@ input[type="radio"].visually-hidden {
   margin-top: 20px;
 }
 
+/*Стили для блока сервисов*/
+
+.services {
+  background-color: #f4f7f9;
+}
+
+.services-headline {
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+
+.services-description {
+  font-family: "PT Sans", Arial, sans-serif;
+  font-size: 13px;
+  line-height: 24px;
+  width: 400px;
+}
+
+.services-slider {
+  display: flex;
+  justify-content: space-between;
+}
+
+.services-control {
+  width: 240px;
+  height: 183px;
+
+  background-color: #32425c;
+}
+
+.services-list {
+  margin: 0;
+  padding: 0;
+  
+  list-style: none;
+}
+
+.services-item {
+  padding: 75px 0 75px 0;
+
+  background-image: url("../img/services-machine.png");
+  background-repeat: no-repeat;
+  background-position: right;
+}
+
+.services-item h3 {
+  font-size: 36px;
+  font-weight: 400;
+  line-height: 36px;
+  margin: 0;
+  margin-left: 80px;
+  color: #32425c;
+  text-transform: uppercase;
+}
+
+.services-item p {
+  font-family: "PT Sans", Arial, sans-serif;
+  font-size: 13px;
+  line-height: 24px;
+  margin-left: 80px;
+}
+
 .company {
   display: flex;
   justify-content: space-between;
@@ -756,6 +820,10 @@ input[type="radio"].visually-hidden {
   background-image: url("../img/icon-right-small.svg");
 }
 
+/*Стилизация фильтра*/
+
+
+
 .filter-catalog {
   display: flex;
   justify-content: space-between;
@@ -767,12 +835,27 @@ input[type="radio"].visually-hidden {
   line-height: 30px;
   color: #32425c;
   margin: 0;
+  margin-bottom: 20px;
   padding-left: 30px;
   padding-top: 32px;
   padding-bottom: 32px;
 
   background-color: #f2f6f8;
   text-transform: uppercase;
+}
+
+.filter-headline {
+  font-size: 13px;
+  line-height: 18px;
+  margin: 0;
+  padding-left: 18px;
+  min-width: 220px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+
+  background-color: #f7f3ec;
+  text-transform: uppercase;
+  box-sizing: border-box;
 }
 
 .filter fieldset {
@@ -788,6 +871,83 @@ input[type="radio"].visually-hidden {
   margin-bottom: 20px;
 
   text-transform: uppercase;
+}
+
+.price-controls {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+
+.price-controls::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  width: 10px;
+  height: 1px;
+
+  transform: translate(-50%, -50%);
+  background: #444444;
+}
+
+.price-controls input {
+  width: 95px;
+  font-size: 17px;
+  line-height: 18px;
+  margin: 0;
+  padding: 10px 0;
+  text-align: center;
+
+  background-color: #f7f3ec;
+  border: none;
+}
+
+.range-controls {
+  position: relative;
+  margin-bottom: 10px;
+  padding: 39px 0;
+
+  background-color: #f7f3ec;
+}
+
+.range-controls .scale {
+  width: 170px;
+  height: 2px;
+  margin-left: 30px;
+
+  background-color: #d7dcde;
+}
+
+.range-controls .bar {
+  width: 140px;
+  height: 2px;
+
+  background: rgb(29, 228, 62);
+}
+
+.range-toggle {
+  position: absolute;
+  top: 29px;
+  left: 20px;
+
+  width: 2px;
+  height: 2px;
+
+  background: #c5c5c5;
+  border: 10px solid #ffffff;
+  border-radius: 50%;
+  box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+  cursor: pointer;
+}
+
+.range-toggle-min {
+  left: 20;
+}
+
+.range-toggle-max {
+  left: 160px;
 }
 
 .filter ul {
