--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,11 @@ input[type="radio"].visually-hidden {
   margin-top: 0;
 }
 
-.user a {
+.user {
+  position: relative;
+}
+
+.user-menu a {
   font-size: 16px;
   line-height: 18px;
   color: #32425c;
@@ -232,10 +236,11 @@ input[type="radio"].visually-hidden {
 }
 
 .user .user-name {
-  position: relative;
+  display: block;
   font-size: 21px;
   line-height: 21px;
   color: #000000;
+  margin: 0;
   padding: 12px 70px 13px 50px;
   text-transform: uppercase;
   font-style: normal;
@@ -244,9 +249,8 @@ input[type="radio"].visually-hidden {
   background-color: #ffffff;
 }
 
-.user .user-name::before {
-  content: "";
-
+.user-icon-men {
+  display: block;
   position: absolute;
   top: 13px;
   left: 13px;
@@ -256,9 +260,8 @@ input[type="radio"].visually-hidden {
   background-image: url("../img/icon-user-normal.svg");
 }
 
-.user .user-name::after {
-  content: "";
-
+.user-icon-logout {
+  display: block;
   position: absolute;
   top: 14px;
   left: 290px;
@@ -269,12 +272,24 @@ input[type="radio"].visually-hidden {
   background-image: url("../img/icon-logout-normal.svg");
 }
 
+.user-icon-men:hover {
+  background-image: url("../img/icon-user-hover.svg");
+}
+
+.user-icon-logout:hover {
+  background-image: url("../img/icon-logout-hover.svg");
+}
+
+.user-name:active {
+  color: rgba(0, 0, 0, 0.3)
+}
+
 .user-menu {
   display: flex;
   list-style: none;
   position: relative;
 
-  margin-top: 0px;
+  margin-top: 5px;
 }
 
 .user-menu::before {
@@ -293,6 +308,10 @@ input[type="radio"].visually-hidden {
 
 .user-menu a:hover {
   color: #ee3643;
+}
+
+.user-menu a:active {
+  color: rgba(50, 66, 92, 0.3);
 }
 
 .contacts {
