--- a/css/style.css
+++ b/css/style.css
@@ -573,11 +573,71 @@ input[type="radio"].visually-hidden {
   background-color: #293449;
 }
 
-.slider-list {
+.slider-list,
+.slider-controls {
   margin: 0;
   padding: 0;
   
   list-style: none;
+}
+
+.slider-controls {
+  position: absolute;
+  left: 50%;
+  top: 220px;
+}
+
+.slider-controls li {
+  display: inline-block;
+}
+
+.slider-controls label {
+  position: relative;
+  display: block;
+  width: 10px;
+  height: 10px;
+
+  border-radius: 50%; 
+  background-color: #ffffff;
+}
+
+.slider-input:checked + label::after {
+  content: "";
+  position: absolute;
+  left: 2px;
+  top: 2px;
+  z-index: 2;
+  width: 6px;
+  height: 6px;
+
+
+  background-color: #ee3643;
+  border-radius: 50%;
+}
+
+.switch-button {
+  position: absolute;
+  width: 35px;
+  height: 35px;
+
+  top: 45%;
+
+  border: none;
+  transform: rotate(45deg);
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.switch-button-right {
+  left: 560px;
+  border-top: 4px solid #ffffff;;
+  border-right: 4px solid #ffffff;;
+}
+
+.switch-button-left {
+  left: 30px;
+  border-bottom: 4px solid #ffffff;;
+  border-left: 4px solid #ffffff;;
 }
 
 .slider-item {
@@ -629,6 +689,11 @@ input[type="radio"].visually-hidden {
 
 .slider-item:nth-child(1) {
   background-image: url("../img/promo-slide1.jpg");
+  background-repeat: no-repeat;
+}
+
+.slider-item:nth-child(2) {
+  background-image: url("../img/promo-slide2.jpg");
   background-repeat: no-repeat;
 }
 
@@ -1255,6 +1320,8 @@ input[type="radio"].visually-hidden {
   border: 4px solid #c5c5c5;
   border-radius: 50%;
 }
+
+/*Нужно*/
 
 .filter-input-radio:hover + label::before {
   border-color: #b5b5b5;
